--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "start": "webpack-dev-server",
     "test": "mocha --require @babel/register 'test/**/**test.js'"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test && npm run build"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
